# proof-tool

./: .gitignore  .golangci.yml  .vercelignore  AGENTS.md  CONTRIBUTING.md  biome.json  go.mod  go.sum  lefthook.yml  package.json  pnpm-lock.yaml  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  preprod-web-app-claim-flow-wasm-lace.yml  proof-release-coherence.yml  release-proof-helper.yml  vendor-drift.yml
apps/ownership-proof-web/: next.config.mjs  package.json  pnpm-workspace.yaml
apps/ownership-proof-web/app/: globals.css  layout.tsx  page.tsx
apps/ownership-proof-web/app/claim-api/: routes.test.ts
apps/ownership-proof-web/components/: ClaimFlow.test.tsx  ClaimFlow.tsx  HelperPairingForward.test.tsx  HomeLanding.test.tsx  HomeLanding.tsx  ProofFlow.test.tsx  ProofFlow.tsx  ReclaimFundingFlow.test.tsx  ReclaimFundingFlow.tsx  ReclaimShell.tsx
apps/ownership-proof-web/e2e/preprod/: app-server.mjs  preflight.mjs  (+52 more)
apps/ownership-proof-web/scripts/: lock-funds-ui-visual-check.mjs  proof-assets-dev-server.mjs  verify-proof-release.mjs  verify-proof-release.test.mjs  verify-reclaim-manifest.mjs  verify-reclaim-manifest.test.mjs
apps/proof-helper-desktop/: package.json  vite.config.ts
apps/proof-helper-desktop/scripts/: check-tauri-linux-prereqs.sh  stage-linux-release.mjs  stage-linux-release.test.mjs  stage-windows-release.mjs
apps/proof-helper-desktop/src/: App.test.tsx  App.tsx  desktopApi.ts  styles.css
apps/proof-helper-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/proof-helper-desktop/src-tauri/key-bundle-core/: Cargo.toml
apps/proof-helper-desktop/src-tauri/key-bundle-core/src/: lib.rs
apps/proof-helper-desktop/src-tauri/sidecar-core/: Cargo.toml
apps/proof-helper-desktop/src-tauri/sidecar-core/src/: lib.rs
apps/proof-helper-desktop/src-tauri/src/: key_bundle.rs  main.rs  proof_assets_release.rs  sidecar.rs
cmd/bench-native-prove/: main.go
cmd/msmworker/: main.go
cmd/proof-tool/: ceremony.go  ceremony_test.go  chunk_manifest.go  main.go  main_test.go  stage2g_material.go  stage2g_material_test.go  stage2g_secure_write_linux.go
cmd/wasm-prover/: doc_nonjs.go  main_js.go  readahead_js.go
contracts/ownership-verifier/: ownership-verifier.cabal
contracts/ownership-verifier/bench/: Bench.hs  ProfileV4.hs
contracts/ownership-verifier/bench/results/: g2-g3-operator-acceptance-2026-07-13.md  g3a-optimized-destination-v2-coherence-2026-07-12.md  zk-02-statement-bound-capacity-2026-07-11.md  zk-02-statement-bound-v2-rc10-stage2g-2026-07-11.md
contracts/ownership-verifier/export/: ReclaimDeploymentScripts.hs
contracts/ownership-verifier/src/Ownership/: OneShotNFT.hs  ParamsHolder.hs  ReclaimBase.hs  ReclaimGlobalMulti.hs  ReclaimGlobalV2.hs
contracts/ownership-verifier/test/: VerifySpec.hs
contracts/ownership-verifier/test-support/: ReclaimBaseOracle.hs  V4BlindValueCoverage.hs
contracts/ownership-verifier/testdata/: ownership-destination-distinct-proofs.txt  ownership-destination-proof.hex  ownership-destination-vk.hex  ownership-proof.hex  ownership-vk.hex  zk-02-batch-transcript-v2.json
deployments/reclaim/preprod/: compromised_user_credentials.txt  disabled.sample.json
docs/: README.md  browser-proving-asset-hosting.md  browser-proving-remote-chunk-matrix.md  browser-proving.md  browser-wasm-prover-experiment-plan.md  browser-wasm-prover-integration-kickoff-brief.md  browser-wasm-prover-proving-time-optimization-plan.md  browser-wasm-prover-webapp-integration-plan.md  c6-xor-and-lookup-soundness.md  local-credential-discovery.md  manual-lace-claim-flow-findings.md  manual-lace-claim-flow-qa-plan.md  native-prover-v2-benchmark-2026-07-13.md  non-technical-ownership-proof-runbook.md  ownership-proof-system.md  preprod-e2e.md  proof-assets-release-inventory.md  proof-helper-desktop-security-review.md  proof-helper-desktop.md  proof-helper-linux-release-runbook.md  proof-helper-windows-release-plan.md  proof-helper-windows-release-runbook.md  reclaim-claim-flow.md  reclaim-contract-audit-context.md  reclaim-contracts-spec.md  reclaim-funding-page.md  trusted-setup-ceremony.md  vercel-preprod-browser-proving-deployment-plan.md  worker-owned-pk-fetch-design.md
docs/benchmarks/v2-baseline-16m/: chunk-manifest-public-key.hex  chunk-manifest.sig
docs/reviews/: pr14-production-readiness-differential-review.md
experiments/wasm-prover/: browser-proving-efficiency-plan.md  optimization-backlog.md
experiments/wasm-prover/msmengine/: shim.go
experiments/wasm-prover/patches/: computeh-parallel-transforms.patch  prove-stream.patch
experiments/wasm-prover/runtime/: guarded-output.mjs  host-emulation.mjs
experiments/wasm-prover/scripts/: controlled-host-load.mjs  guarded-browser-benchmark.mjs  key-discovery-browser-benchmark.mjs  remote-chunk-matrix.mjs  verify-tamper.mjs
experiments/wasm-prover/tests/: fft-transform-roundtrip.mjs  guarded-browser-benchmark.test.mjs  key-discovery.mjs  w7-worker-cache.test.mjs
internal/circuit/ckd/: encoding.go  public.go  public_test.go
internal/circuit/ownership/: circuit_test.go  discovery.go  discovery_test.go
internal/circuit/ownershipdest/: circuit.go  circuit_test.go
internal/helper/: bundle_integration_test.go  helper.go  server.go  server_test.go
internal/msmengine/: async_contract.go  async_js.go  cpu.go  engine.go  engine_test.go  hfft_js.go  hfft_kernel.go  hfft_kernel_test.go  partition.go  ranged_test.go  selector.go  selector_js.go  selector_nojs.go  selector_test.go  serialize.go  serialize_test.go  sharded_js.go  sharded_partition_test.go
internal/proofassets/: chunk_manifest.go  chunk_manifest_test.go  digest.go  pkindex.go
internal/prover/: prover.go
internal/streampk/: index.go  keysource.go  range.go  range_test.go
internal/streamprove/: streamprove.go  streamprove_test.go
internal/verifier/: pinned.go
scripts/: bootstrap-vendor.sh  build-wasm-prover.sh  check-vendor-drift.sh  dev-credential-proof.sh  push-pr-with-local-lace-claim-flow.mjs  stage-proof-assets.sh  test-all.sh
scripts/hash-blake2b/: main.go
(+73 files in other folders)
