cabal-version: 3.0
name:          ownership-verifier
version:       0.1.0.0
synopsis:      Plutus V3 ownership proof verifier for proof-tool artifacts
license:       Apache-2.0

common common-lang
  ghc-options:      -Wall -Wno-unused-packages
  default-language: Haskell2010

library
  import:          common-lang
  hs-source-dirs:  src
  exposed-modules:
    Ownership.OneShotNFT
    Ownership.ParamsHolder
    Ownership.ReclaimBase
    Ownership.ReclaimGlobalV2
    Ownership.ReclaimGlobalMulti
    Ownership.ReclaimGlobalMultiV2Bench
    Ownership.Verify
  build-depends:
    , base              >= 4.17 && < 5
    , plutus-ledger-api >= 1.30 && < 2
    , plutus-tx         >= 1.30 && < 2
    , plutus-tx-plugin  >= 1.30 && < 2
    , plutus-core       >= 1.30 && < 2
  ghc-options:
    -fplugin PlutusTx.Plugin
    -fplugin-opt PlutusTx.Plugin:remove-trace

test-suite ownership-verifier-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        VerifySpec.hs
  hs-source-dirs:
    test
    test-support
  other-modules:
    Protocol11Snapshot
    ReclaimBaseOracle
    ScriptContextBuilder
    V4BlindValueCoverage
  build-depends:
    , aeson               >= 2.0
    , base                >= 4.17 && < 5
    , bytestring          >= 0.11
    , cryptonite          >= 0.30
    , directory           >= 1.3
    , ownership-verifier
    , plutus-core         >= 1.30 && < 2
    , plutus-ledger-api   >= 1.30 && < 2
    , plutus-tx           >= 1.30 && < 2
    , plutus-tx-plugin    >= 1.30 && < 2
    , process             >= 1.6
    , QuickCheck          >= 2.14
    , tasty               >= 1.4
    , tasty-hunit         >= 0.10
    , tasty-quickcheck    >= 0.10
    , text                >= 2.0
    , transformers        >= 0.6
  build-tool-depends:
    , ownership-verifier:reclaim-scripts-export

benchmark ownership-verifier-bench
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Bench.hs
  hs-source-dirs:
    bench
    test-support
  other-modules:
    Protocol11Snapshot
    ScriptContextBuilder
  build-depends:
    , aeson               >= 2.0
    , base                >= 4.17 && < 5
    , bytestring          >= 0.11
    , cryptonite          >= 0.30
    , ownership-verifier
    , plutus-core         >= 1.30 && < 2
    , plutus-ledger-api   >= 1.30 && < 2
    , plutus-tx           >= 1.30 && < 2
    , plutus-tx-plugin    >= 1.30 && < 2
    , process             >= 1.6
    , text                >= 2.0
    , transformers        >= 0.6
  ghc-options:
    -fplugin PlutusTx.Plugin
    -fplugin-opt PlutusTx.Plugin:remove-trace

benchmark ownership-verifier-v4-profile
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        ProfileV4.hs
  hs-source-dirs:
    bench
    test-support
  other-modules:
    ScriptContextBuilder
  build-depends:
    , base                >= 4.17 && < 5
    , ownership-verifier
    , plutus-core         >= 1.30 && < 2
    , plutus-ledger-api   >= 1.30 && < 2
    , plutus-tx           >= 1.30 && < 2
    , plutus-tx-plugin    >= 1.30 && < 2
  ghc-options:
    -fplugin PlutusTx.Plugin
    -fplugin-opt PlutusTx.Plugin:remove-trace

executable reclaim-scripts-export
  import:          common-lang
  main-is:         ReclaimDeploymentScripts.hs
  hs-source-dirs:
    export
  build-depends:
    , base                >= 4.17 && < 5
    , bytestring          >= 0.11
    , ownership-verifier
    , plutus-ledger-api   >= 1.30 && < 2
    , plutus-tx           >= 1.30 && < 2
    , plutus-tx-plugin    >= 1.30 && < 2
  ghc-options:
    -fplugin PlutusTx.Plugin
    -fplugin-opt PlutusTx.Plugin:remove-trace

executable verify-destination-proof
  import:          common-lang
  main-is:         VerifyDestinationProof.hs
  hs-source-dirs:  export
  build-depends:
    , base                >= 4.17 && < 5
    , ownership-verifier
    , plutus-tx           >= 1.30 && < 2
    , plutus-tx-plugin    >= 1.30 && < 2
  ghc-options:
    -fplugin PlutusTx.Plugin
    -fplugin-opt PlutusTx.Plugin:remove-trace
