[package]
name = "proof-helper-desktop"
version = "0.1.0"
description = "Desktop wrapper for the local Proof Helper sidecar"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
key-bundle-core = { path = "key-bundle-core" }
sidecar-core = { path = "sidecar-core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
url = "2"

[dev-dependencies]
serde_json = "1"
tauri = { version = "2", features = ["test"] }
