[package]
name = "proof-helper-desktop"
version = "0.2.2"
description = "Desktop wrapper for the local Proof Helper sidecar"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
key-bundle-core = { path = "key-bundle-core" }
sidecar-core = { path = "sidecar-core" }
blake2 = "0.10"
flate2 = "1"
fs2 = "0.4"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
url = "2"

[dev-dependencies]
ed25519-dalek = "2"
serde_json = "1"
tauri = { version = "2", features = ["test"] }
tempfile = "3"
